Dockerisation – not working yet

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 db {
-  url = "jdbc:postgresql://localhost:5432/kata"
+  url = "jdbc:postgresql://db_kata:5432/kata"
   user = "postgres"
   password = "postgres"
 }
