--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         environment:
             POSTGRES_PASSWORD: postgres
         volumes:
-            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+            - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
         networks:
             - kata
 
